--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
 ]
 
 [tool.uv.sources]
-canaddress = { git = "https://github.com/ZacharyCoumont/canaddress.git" }
+canaddress = { git = "https://github.com/Doosun/canaddress.git" }
 
 [tool.setuptools.packages.find]
 where = ["src"]
