update to commit instead of version on canaddress ref

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.12"
 dependencies = [
-    "canaddress==0.5.16",
+    "canaddress@f50dc1c8d051dab0de143852fb51a9c93ef47b39",
     "levenshtein>=0.27.1",
     "probableparsing>=0.0.1",
     "psycopg>=3.2.10",
